Update Et3ResponseHelper